This fixes problem with scrolling in sidebar on firefox

--- a/src/client/stylesheets/components/_sidebar.scss
+++ b/src/client/stylesheets/components/_sidebar.scss
@@ -2,6 +2,7 @@ $icons: '../icons/';
 
 .sidebar {
     width: $sidebarWidth;
+    height: 100%;
     background-color: #DDD;
     position: relative;
     z-index: 5;
